--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   http: ^1.0.0
+  mobile_scanner: ^3.2.0
 
 dev_dependencies:
   flutter_test:
