--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   intl: ^0.18.1
   flutter_local_notifications: ^14.1.0
   permission_handler: ^10.2.0
+  restart_app: ^1.2.1
 
 dev_dependencies:
   flutter_test:
