--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_local_notifications: ^14.1.1
   permission_handler: ^10.2.0
   restart_app: ^1.2.1
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
