--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   permission_handler: ^10.2.0
   restart_app: ^1.2.1
   rxdart: ^0.27.7
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
