--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   restart_app: ^1.2.1
   rxdart: ^0.27.7
   url_launcher: ^6.1.11
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
