QRcode generation, payment info after notification

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   url_launcher: ^6.1.11
   sliding_up_panel: ^2.0.0+1
   flutter_osm_plugin: ^0.55.1+1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
