--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   flutter_osm_plugin: ^0.55.1+1
   qr_flutter: ^4.1.0
+  dotted_line: ^3.2.2
 
 dev_dependencies:
   flutter_test:
