--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
   restart_app: ^1.2.1
   rxdart: ^0.27.7
   url_launcher: ^6.1.11
-  sliding_up_panel: ^2.0.0+1
   flutter_osm_plugin: ^0.55.1+1
   qr_flutter: ^4.1.0
   dotted_line: ^3.2.2
+  flutter_sliding_up_panel: ^2.0.1
 
 dev_dependencies:
   flutter_test:
