--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   qr_flutter: ^4.1.0
   dotted_line: ^3.2.2
   flutter_sliding_up_panel: ^2.0.1
+  quiver: ^3.2.1
 
 dev_dependencies:
   flutter_test:
