--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ app/macos/Flutter/GeneratedPluginRegistrant.swift
 app/windows/flutter/generated_plugin_registrant.cc
 app/windows/flutter/generated_plugin_registrant.h
 app/windows/flutter/generated_plugins.cmake
+.vscode/
